--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,7 +1,10 @@
-
-
-
-
+body {
+  /* Set the background image and its properties */
+  background-image: url('Images/background/back-2.jpg') !important;
+  background-size: cover;
+  background-position: center top;
+  background-attachment: fixed;
+}
 
 h2, h4 {
   font-family: 'Merriweather', serif;
@@ -9,7 +12,7 @@ h2, h4 {
 
 
 h1, h3, h5, h6, p, a, li, .login{
-  font-family: 'Poppins', sans-serif;
+  font-family: Madefor, Helvetica Neue,Helvetica,Arial,メイリオ,meiryo,ヒラギノ角ゴ pro w3,hiragino kaku gothic pro,sans-serif;
   font-size: 16px;
   color: black; 
   text-decoration: none;
@@ -34,7 +37,7 @@ h1, h3, h5, h6, p, a, li, .login{
   margin-right: 20px;
   position: relative;
   cursor: pointer;
-  background-color: #AED8CC;
+  
 }
 
 #menuToggle:hover {
@@ -117,16 +120,17 @@ h2:hover {
 }
 
 /* IMAGES WHITE BAR */
-
-.second-card {
+.second-card, 
+.second-card-home {
   position: relative;
   overflow: hidden; /* To ensure the transparent bar doesn't overflow outside the container */
 }
 
-.transparent-bar {
+.transparent-bar,
+.transparent-bar-home {
   position: absolute;
-  bottom: 28%;
   left: 0;
+  
   width: 100%;
   height: 50px; 
   background-color: white; 
@@ -137,10 +141,25 @@ h2:hover {
   transition: opacity 0.3s ease; 
 }
 
+.transparent-bar {
+  bottom: 21%;
+}
+
+.transparent-bar-home {
+  bottom: 26%;
+
+}
+
+.second-card-home:hover .transparent-bar-home {
+  opacity: 1; 
+  cursor: pointer; 
+}
 .second-card:hover .transparent-bar {
   opacity: 1; 
   cursor: pointer; 
 }
+
+
 
 #home-shop-button {
   display: none;
@@ -241,17 +260,6 @@ label {
 
 /* Shop All Page  */
 
-
-/* .color-picker {
-    width: 20px;
-    height: 20px;
-    padding: 0;
-    border: none;
-    border-radius: 50%;
-    outline: none;
-}
-  
-
 .dropdown h3 {
   display: flex;
   flex-direction: row;
@@ -263,29 +271,28 @@ label {
   object-fit: cover;
   object-position: 50% 50%; }
 
-.sort-container {
-  margin: 30px 0px; }
-
-.sortBy {
-  display: flex;
-  justify-content: flex-end; }
-
-select {
-  width: 100px; }
-
-.form-select {
-  max-width: 100%;
-  max-width: 100px; }
-
 .shop-container {
-  margin-left: 10%;
-  width: 100%;
-  margin-bottom: 30px; }
+  margin-top: 10%;
 
+}
 
+/* price range */
+.price-container {
+  margin-top: 10%;
+  
+}
 
+#priceRangeSlider {
+  float: right;
+}
 
+.form-label {
 
+}
+
+.form-range {
+  max-width: 100px;
+}
 
 
 
