--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,35 +1,24 @@
-body {
-  /* Set the background image and its properties */
-  background-image: url('Images/background/back-2.jpg') !important;
-  background-size: cover;
-  background-position: center top;
-  background-attachment: fixed;
+h2, h3, h4 {
+  font: normal 40px 'Merriweather', Arial, serif;
 }
 
-h2, h4 {
-  font-family: 'Merriweather', serif;
-  font-size: 40px; }
-
-
-h1, h3, h5, h6, p, a, li, .login{
-  font-family: Madefor, Helvetica Neue,Helvetica,Arial,メイリオ,meiryo,ヒラギノ角ゴ pro w3,hiragino kaku gothic pro,sans-serif;
-  font-size: 16px;
-  color: black; 
+h1, h5, h6, p, a, li, .login {
+  font: normal 16px 'Montserrat', 'Helvetica Neue', Helvetica, Arial, メイリオ, meiryo, ヒラギノ角ゴ pro w3, hiragino kaku gothic pro, sans-serif;
+  color: black;
   text-decoration: none;
 }
 
-
-
+h2:hover {
+  color: white;
+  cursor: pointer;
+}
 .navbar-brand:hover {
   background-color: #AED8CC;
 }
-
-/* login button */
 #button-container {
-  display: flex; 
+  display: flex;
   align-items: center;
 }
-
 #menuToggle {
   border: none;
   color: black;
@@ -37,13 +26,10 @@ h1, h3, h5, h6, p, a, li, .login{
   margin-right: 20px;
   position: relative;
   cursor: pointer;
-  
 }
-
 #menuToggle:hover {
   cursor: pointer;
 }
-
 #menu {
   display: none;
   position: absolute;
@@ -55,256 +41,203 @@ h1, h3, h5, h6, p, a, li, .login{
   min-width: 300px;
   height: 400px;
 }
-
-#menu li:hover{
-  background-color: #AED8CC;
-}
-
-#menu.show {
-  display: block;
-}
-
 #menu li {
   padding: 20px 0;
   font-size: 22px;
   list-style: none;
 }
- 
-
-h2:hover {
-  color: white;
-  cursor: pointer;
+#menu li:hover {
+  background-color: #AED8CC;
 }
-
+#menu.show {
+  display: block;
+}
 
 /* MAIN */
 #h3-main {
-  font-size: 20px; 
-  font-style: italic; 
-  color: #224B0C; 
+  font-weight: bold;
+  font-size: 20px;
+  font-style: italic;
+  color: #224B0C;
   padding-top: 90px;
 }
-
 #h1-main {
-  font-size:150px; 
-  font-weight: bolder; 
-  color: white; 
-  z-index: 10; 
+  font-weight: bolder;
+  font-size: 150px;
+  color: white;
   text-decoration: underline;
 }
-
 #spring-button {
-  width: 150px; 
+  width: 150px;
   border-radius: 0;
   background-color: #224B0C;
 }
-
 .a-spring {
-  text-decoration: none; 
-  color: white
+  text-decoration: none;
+  color: white;
 }
 
+/* ABOUT */
 #card-text {
   line-height: 2rem;
   margin-top: 15px;
 }
-
-/* ABOUT  */
 #card-about {
-  margin: 30% 0px 30% 85px; 
+  margin: 25% 0px 30% 85px;
   background-color: white;
   padding: 60px;
   width: 90%;
   border-radius: 5px;
- 
 }
 
-/* IMAGES WHITE BAR */
-.second-card, 
-.second-card-home {
+/* IMAGES CONTAINER */
+.second-card, .second-card-home{
   position: relative;
-  overflow: hidden; /* To ensure the transparent bar doesn't overflow outside the container */
+  overflow: hidden;
 }
 
-.transparent-bar,
-.transparent-bar-home {
+.second-card-home:hover .transparent-bar-home, 
+.second-card:hover .transparent-bar  {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.transparent-bar, .transparent-bar-home {
   position: absolute;
   left: 0;
-  
   width: 100%;
-  height: 50px; 
-  background-color: white; 
+  height: 50px;
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transition: opacity 0.3s ease; 
+  transition: opacity 0.3s ease;
+  
 }
 
 .transparent-bar {
   bottom: 21%;
 }
-
 .transparent-bar-home {
   bottom: 26%;
-
 }
 
-.second-card-home:hover .transparent-bar-home {
-  opacity: 1; 
-  cursor: pointer; 
-}
-.second-card:hover .transparent-bar {
-  opacity: 1; 
-  cursor: pointer; 
-}
-
-
-
+/* home images button */
 #home-shop-button {
   display: none;
   background-color: #224B0C;
   color: white;
   border-radius: 0;
   margin: 10px auto 0px;
-  padding: 10px 40px; 
+  padding: 10px 40px;
   width: 100%;
 }
 
 .custom-border {
-  border-bottom: 2px solid #224B0C; 
-  width: 5%; 
+  border-bottom: 2px solid #224B0C;
+  width: 5%;
 }
-
 .card-img-about {
   width: 100%;
   max-width: 450px;
-  height: auto; }
-
+  height: auto;
+}
 .card-about-second {
-  left: 20%; }
+  left: 20%;
+}
 
-/* HANDLEBAR  */
 #title-handle {
   margin: 30px 8.5%;
 }
 
-#viewAllButton{
+#viewAllButton {
   background-color: #224B0C;
   border-radius: 0;
   margin: 50px auto;
-  padding: 10px 40px; 
-  max-width:200px;
+  padding: 10px 40px;
+  max-width: 200px;
 }
 
 /* CONTACT */
 .contact-container {
   padding: 50px;
   background-color: white;
- margin: 10% auto;
+  margin: 10% auto;
   width: 80%;
 }
-
 .contact-title {
-  color: #224b0c; 
-  font-size: 16px; 
-  margin-top: 20px; 
+  color: #224b0c;
+  font-size: 16px;
+  margin-top: 20px;
   padding: 20px 20px 10px 20px;
 }
-
 .custom-border-contact {
-  border-bottom: 2px solid #224B0C; 
-  width: 15%; 
+  border-bottom: 2px solid #224B0C;
+  width: 15%;
   margin-left: 20px;
 }
-
 .contact-list {
-  list-style: none; 
+  list-style: none;
   margin: 15px 0px 20px -10px;
   padding: 20px 30px 20px 30px;
 }
-
 .contact-list li {
-  line-height: 2rem; 
+  line-height: 2rem;
 }
-
 label {
   margin-left: 20px;
   padding: 20px 0px 0px;
 }
-
 #button-add {
-  background-color:  #AED8CC;
+  background-color: #AED8CC;
   color: #224B0C;
   border-radius: 0;
-  max-width:100px;
+  max-width: 100px;
   cursor: pointer;
 }
-
-
-#input:focus {
-  border-color: black;
-}
-
-#input:hover {
-  border: 3px solid black;
-}
-
 #button-add:hover {
   background-color: #A1CCD1;
 }
-
-
-
-
-
-/* Shop All Page  */
-
+#input:focus {
+  border-color: black;
+}
+#input:hover {
+  border: 3px solid black;
+}
 .dropdown h3 {
   display: flex;
   flex-direction: row;
-  justify-content: space-between; }
-
+  justify-content: space-between;
+}
 .img-fluid-shop {
   width: 1100px;
   height: 280px;
   object-fit: cover;
-  object-position: 50% 50%; }
-
+  object-position: 50% 50%;
+}
 .shop-container {
   margin-top: 10%;
-
 }
-
-/* price range */
 .price-container {
   margin-top: 10%;
-  
 }
-
 #priceRangeSlider {
   float: right;
 }
-
-.form-label {
-
-}
-
 .form-range {
   max-width: 100px;
 }
 
 
 
-/* chat wrapper */
-  /* #chat-wrapper {
+/* #chat-wrapper {
     position: fixed;
     bottom: 20px;
     right: 20px;
     z-index: 10;
   } */
-  
-  /* #chat-button {
+/* #chat-button {
     margin-right: 20px;
     background-color: #8E3200;
     color: #fff;
@@ -370,7 +303,6 @@ label {
     padding: 12px 20px;
     background-color: #f9fafb;
 } */
-
 /*
 .publi-w>*:first-child {
     margin-left: 0;
